--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -66,3 +66,38 @@ label{
     position: absolute;
     align-items: center;
 }
+
+.body {
+  background: -webkit-linear-gradient(left, #25c481, #25b7c4);
+  background: linear-gradient(to right, #25c481, #25b7c4);
+}
+
+table {
+  width: 100%;
+  table-layout: fixed;
+}
+
+thead {
+  width: 100%;
+  background-color: rgba(255,255,255,0.7);
+  border: 1px solid rgba(255,255,255,0.3);
+}
+
+tbody {
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.7);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+tr {
+  width: 100%;
+}
+
+th,
+td {
+  padding: 20px 15px;
+  text-align: left;
+  font-weight: 500;
+  font-size: 17px;
+  color: black;
+}
